--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin> 
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <configuration>
+        <excludes>
+            <exclude>**/dao/*.class</exclude>
+        </excludes>
+     </configuration>
+</plugin>
 		</plugins>
 	</build>
 
